client/css/app.css
/* ... */
  .comment .commentBody { position: relative; }

    .commentBody .commentAvatar {
      float: left;
      padding: 8px;
    }

    .commentBody .commentInfo {
      float: left;
      padding: 8px 0 8px 8px;
      width: 72%;
    }

      .commentInfo h5 {
        font-size: 14px;
        font-weight: 600;
      }

      .commentInfo p { line-height: 1.5em; }

      .commentInfo p:last-child { margin-bottom: 0; }
    
    .commentBody span.commentTime {
      display: block;
      position: absolute;
      bottom: 12px;
      right: 12px;
      color: #626262;
      font-size: 12px;
    }


/* -----------------------------------------
   Markdown Styles
----------------------------------------- */

.md > h2:first-child, .md > h1:first-child, .md > h1:first-child + h2 {
  border: 0;
  margin: 0;
  padding: 0;
  border-image: initial;
}

.md > :first-child { margin-top: 0!important; }

.md h1 {
  margin: 15px 0;
  padding-bottom: 2px;
  font-size: 24px;
  border-bottom: 1px solid #EEE;
}

.md h2 {
  margin: 20px 0 10px 0;
  font-size: 18px;
}

.md h3 {
  margin: 20px 0 10px 0;
  padding-bottom: 2px;
  font-size: 14px;
  border-bottom: 1px solid #DDD;
}

.md p { margin: 1em 0; }

  .md p strong { font-weight: 700; }

.md pre {
  margin: 0 0 18px 0;
  background-color: #F8F8F8;
  border: 1px solid #CCC;
  font-size: 13px;
  line-height: 19px;
  overflow: auto;
  padding: 6px 10px;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-image: initial;
}

 .md pre code { border: none; }

.md code, .md tt {
  margin: 0 2px;
  padding: 2px 5px;
  border: 1px solid #CCC;
  font-size: 13px;
  line-height: 19px;
  background-color: #F8F8F8;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-image: initial;
}

  .md code, .md pre { font: 12px 'Bitstream Vera Sans Mono','Courier', monospace; }

.md > ul, .md > .document > ul, .md > ol, .md > .document > ol {
  margin-top: 21px;
  margin-left: 36px;
  list-style: disc;
}

  .md ul, .md ol { margin: 15px 0 15px 25px; }

    .md ul li, .md ol li {
      margin-top: 7px;
      margin-bottom: 7px;
    }

    .md ul li > :first-child, .md ol li > :first-child { margin-top: 0; }

    .md ul li > :last-child, .md ol li > :last-child { margin-bottom: 0; }

  
/* -----------------------------------------
   Forms
----------------------------------------- */

form .outerWrap {
  padding: 8px;
  background: #fff;
  border: 1px solid #cfd0d0;
  border: 1px solid rgba(207,208,208,0.7);
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

  form textarea {
    padding: 0;
    margin: 0;
    border: none;
  }

    form textarea:focus { background: #fff; }


/* -----------------------------------------
   Comment Form
----------------------------------------- */

.commentBody form { margin: 0; }

.commentBody textarea {
  width: 100%;
  font-size: 14px;
  height: 14px;
  color: #222;
}


/* -----------------------------------------
   Ticket Form
----------------------------------------- */

#ticketForm form {
  padding: 20px 30px;
  margin-bottom: 0px;
  cursor: default;
}

  #ticketForm form input[type="text"], #ticketForm form textarea {
    font-size: 14px;
  }

  #ticketForm form input[type="text"] {
    width: 100%;
    padding: 8px;
    font-size: 16px;
    font-weight: 700;
  }

  #ticketForm form textarea {
    width: 100%;
    height: 200px;
  }

  #ticketForm form .seperator {
    padding-bottom: 12px;
    margin-bottom: 12px;
    border-bottom: 1px solid #cfd0d0;
    border-bottom: 1px solid rgba(207,208,208,0.7);
  }

  #ticketForm form button {
    cursor: pointer;
    margin: 12px 0 0 0;
    -moz-border-radius: 20px;
    -webkit-border-radius: 20px;
    border-radius: 20px;
    padding: 0.4em 2em;
    color: #fff;
    border: none;
  }


/* -----------------------------------------
   Login Form
----------------------------------------- */

#loginForm { padding: 20px 30px; }

  #loginForm h2 {
    font-size: 38px;
    text-align: center;
  }

  #loginForm li {
    margin: 20px 0;
    text-align: center;
  }

/* -----------------------------------------
   CSS3 Social Login Buttons
   https://github.com/necolas/css3-social-signin-buttons
----------------------------------------- */

/*
 * Button Object
 */

/*
 * 1. Corrects inability to style clickable 'input' types in iOS
 * 2. Remove excess padding in IE6/7
 * 3. IE6/7 inline-block hack for native block-level elements
 */

.btn-auth {
    position: relative;
    display: inline-block;
    height: 22px;
    padding: 0 1em;
    border: 1px solid #999;
    border-radius: 2px;
    margin: 0;
    text-align: center;
    text-decoration: none;
    font-size: 14px;
    line-height: 22px;
    white-space: nowrap;
    cursor: pointer;
    color: #222;
    background: #fff;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    /* iOS */
    -webkit-appearance: none; /* 1 */
    /* IE6/7 hacks */
    *overflow: visible;  /* 2 */
    *display: inline; /* 3 */
    *zoom: 1; /* 3 */
}

.btn-auth:hover,
.btn-auth:focus,
.btn-auth:active {
    text-decoration: none;
}

.btn-auth:before {
    content: "";
    float: left;
    width: 22px;
    height: 22px;
    background: url('/img/assets/auth-icons.png') no-repeat 99px 99px;
}

/*
 * 36px
 */

.btn-auth.large {
    height: 36px;
    line-height: 36px;
    font-size: 20px;
}

.btn-auth.large:before {
    width: 36px;
    height: 36px;
}

/*
 * Remove excess padding and border in FF3+
 */

.btn-auth::-moz-focus-inner {
    border: 0;
    padding: 0;
}
/* ... */

